# ica-oracle

./: Cargo.toml  LICENSE  Makefile  README.md
scripts/: add_metric.sh  add_oracle.sh  init_ica_oracle.sh  instantiate_contract.sh  queries.sh  query_errors.sh  query_metrics.sh  store_contract.sh  vars.sh
src/: contract.rs  error.rs  execute.rs  helpers.rs  msg.rs  query.rs  state.rs
