[package]
name = "ica-oracle"
version = "1.0.1"
authors = ["sampocs <sam@stridelabs.co>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.3.3"
cosmwasm-std = "1.3.3"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
hex = "0.4.3"
sha2 = "0.10.7"
thiserror = "1.0.47"
semver = "1.0.20"
schemars = "0.8.12"
serde = "1.0.155"